# aoc-2023

./: .gitconfig  .gitignore
python/: .coverage  .envrc  Makefile  coverage.xml  pyproject.toml  requirements.txt
python/coverage/: coverage.xml  d_0ab1fbaff22fbf2a_decoder_py.html  d_8bfabf1413e347db_decoder_py.html  index.html  status.json
python/src/: main.py
python/src/aoc/day1/: decoder.py
python/src/aoc/day1/assets/: test_puzzle.txt
python/src/aoc/day2/: gamemachine.py
python/src/aoc/day3/: enginefixer.py
python/src/aoc/day4/: lotterymachine.py
python/src/aoc/day5/: fertiliser.py
python/src/aoc/day_1/: decoder.py
python/src/aoc/shared/: io.py
python/tests/: test_decoder.py
python/tests/day1/: test_decoder.py
python/tests/day2/: test_gamemachine.py
python/tests/day3/: test_enginefixer.py
python/tests/day4/: test_lotterymachine.py
rust/day1/: Makefile
rust/day1/src/: main.rs
