[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=63", "wheel"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/main.py", "*/**/__init__.py", "*/**/__version__.py"]

[tool.coverage.report]
skip_empty = true
exclude_also = ["if __name__ == .__main__.:", "def.__init__"]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
max-line-length = 100

[tool.autoflake]
check = false
in-place = true
quiet = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.flake8]
extend-ignore = ["E203"]
max-complexity = 10
max-line-length = 100

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.11"

mypy_path = ["src", "tests"]

show_column_numbers = true
show_error_codes = true

# be strict
strict = true

# except for...
disallow_untyped_calls = false
no_implicit_reexport = false

# Unreachable blocks have been an issue when compiling mypyc, let's try
# to avoid 'em in the first place.
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "blib2to3.driver.*, IPython.*, colorama.*, pathspec.*, tokenize_rt.*, uvloop.*, _black_version.*"
